--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sorting_visuals",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://NiyatiPanchal.github.io/Sorting-Algorithm-Visulizer",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
